# agendamento-back-v2

./: .gitignore  README.md  model.env  pyproject.toml
src/: main.py
src/core/: main.py
src/core/auth/: auth_utils.py  token_provider.py
src/core/database/: database.py
src/core/routes/: auth_route.py  user_route.py
src/core/schemas/: token_schemas.py
src/schedule/: route.py  schema.py
src/schedule/routes/: public_user_route.py
src/schedule/schemas/: public_user_schema.py
src/schedule/serializers/: public_user_serializer.py
src/scripts/: run.py
src/utils/: token_provider.py
